# heymans

./: .env.example  alembic.ini  app.py  bs_get_token.py  conftest.py  pyproject.toml  readme.md
.github/workflows/: run-unittests.yaml
example/: brightspace-questions.csv  brightspace-results.csv  exam-questions.md  heymans-brightspace-example.html  heymans-brightspace-example.ipynb  heymans-brightspace-example.py
example/feedback/: 0.md  1.md  10.md  100.md  101.md  102.md  103.md  104.md  105.md  106.md  107.md  108.md  109.md  11.md  110.md  111.md  112.md  113.md  114.md  115.md  116.md  117.md  118.md  119.md  12.md  120.md  121.md  122.md  123.md  124.md  125.md  126.md  127.md  128.md  129.md  13.md  130.md  131.md  132.md  133.md  (+101 more)
example/output/: brightspace-questions.csv  difficulty-and-discrimination.csv  exam-results.json  exam-validation.md  grades.csv  qualitative-error-analysis.md
heymans/: __init__.py  brightspace.py  chatbot_model.py  config.py  convert.py  forms.py  grading_formulas.py  interactive_quizzes.py  json_schemas.py  prompts.py  qa.py  quizzes.py  redis_utils.py  report.py  server.py
heymans/database/: models.py  operations.py  schemas.py
heymans/database/operations/: documents.py  interactive_quizzes.py  qa.py  quizzes.py  users.py
heymans/routes/: __init__.py  _app.py  _brightspace.py  _brightspace_login.py  _documents.py  _google_login.py  _interactive_quizzes.py  _public.py  _qa.py  _quizzes.py  _replies.py  _user.py  google_login.py
heymans/static/css/: base.css  chat.css  components.css  layout.css
heymans/static/js/: common.js
heymans/templates/: banner.html  base.html  chat_base.html  example.html  footer.html  head.html  iquiz.html  iquiz_sess.html  kb.html  login.html  quiz.html  quiz.js  quiz_grading.html  stylesheet.css
heymans/templates/partials/: _chat.html  _chat_logs.html  _doc_management.html  _iquiz_management.html  _quiz_content.html  banner.html  chat_banner.html  footer.html  head.html
migrations/versions/: 20260512_d015dd94f42e_add_interactive_quiz_skill_columns.py  b663c806da2b_add_chat_quiz_skill_columns.py
output/: grades.csv
tests/brightspace/: test_brightspace.py
tests/cheap/: __init__.py  test_app.py  test_convert.py  test_documents_api.py  test_grading_formulas.py  test_interactive_quizzes_api.py  test_quizzes_api.py  test_quizzes_standalone.py  test_report.py
tests/cheap/testdata/: exam-markdown-invalid-questions.md  exam-markdown-questions.md  quiz-data.json  test.docx  test.odt  (+1 more)
(+5 files in other folders)
