[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"
[project]
name = "heymans"
authors = [
    {name = "Sebastiaan Mathôt", email = "s.mathot@rug.nl"},
    {name = "Wouter Kruijne", email = "w.kruijne@rug.nl"}
]
readme = "readme.md"
license = {file = "COPYING"}
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
    "sigmund>=1.4.1",
    "datamatrix",
    "dotenv",
    "marshmallow",
    "marshmallow-sqlalchemy",
    "jsonschema",
    "langchain==0.3.27",
    "pypandoc",
    "matplotlib",
    "markdown",
    "seaborn",
    "numpy",
    "scipy"
]
keywords = ["ai", "chatbot", "llm", "education"]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
[project.urls]
Source = "https://github.com/rug-gmw/heymans"
